--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /node_modules
 /auth/node_modules
+/common/node_modules
+/orders/node_modules
+/tickets/node_modules
+/nats-test/node_modules
+/client/node_modules
 /auth/package-lock.json
