--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -14,13 +14,13 @@ spec:
     spec:
       containers:
         - name: auth
-          image: albanybuipe/auth
+          image: buipealbany/auth
           env:
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
                   name: jwt-secret
-                  key: JWT_KEY 
+                  key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
