--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,19 +8,19 @@ build:
   local:
     push: false
   artifacts:
-    - image: albanybuipe/auth
+    - image: buipealbany/auth
       context: auth
       docker:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: 'src/**/*.ts'
+          - src: "src/**/*.ts"
             dest: .
-    - image: albanybuipe/client
+    - image: buipealbany/client
       context: client
       docker:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: '**/*.js'
+          - src: "**/*.js"
             dest: .
